# context-curator-lite

./: AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  USAGE.md  pyproject.toml
.github/workflows/: release-artifacts.yml
docs/brand/: README.md
examples/: demo.py
src/context_curator_lite/: __init__.py  cli.py  curator.py  telos_envelope.py
tests/: test_curator.py
